--- a/src/Result.module.css
+++ b/src/Result.module.css
@@ -5,7 +5,7 @@
   font-size: 8em;
 }
 .result button {
-  background-color: rgb(255, 28, 112);
+  background-color: #ff1c70;
   color: white;
   font-size: 4rem;
   width: 25rem;
